FIX: font size of button on mobile sizes

--- a/css/queries.css
+++ b/css/queries.css
@@ -72,6 +72,7 @@
   .form-control .btn {
     width: 40%;
     margin: 0 auto;
+    font-size: 1.8rem;
   }
 }
 
